Prevent nav links from wrapping on mobile.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -341,6 +341,7 @@ nav {
     @include mobile {
       margin: 0 10px;
       color: $blue;
+      white-space: nowrap;
     }
   }
 }
